[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game-sitemap-radar"
version = "0.1.0"
description = "CLI sitemap signal radar for newly covered game keywords."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
full = ["httpx>=0.27", "pyyaml>=6", "rich>=13", "pandas>=2"]
templates = ["jinja2>=3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
